--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -1,4 +1,5 @@
 @use "../../utils/variables" as v;
+@use "../../utils/mixins" as m;
 
 .account-sidebar-component {
 	.sidebar-container {
@@ -16,8 +17,8 @@
 		border: v.$base-sidebar-border-width solid black;
 		border-right: none;
 		background: white;
-		height: 340px;
-		width: 430px;
+		height: 376px;
+		width: v.$account-sidebar-width;
 		text-align: left;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
@@ -25,18 +26,37 @@
 		overflow-x: hidden !important;
 	}
 
+	.settings-button {
+		position: absolute;
+		top: 10px;
+		left: 13px;
+		border: none;
+		background: none;
+		color: v.$darker-icon-button-gray;
+		font-size: 22px;
+		cursor: pointer;
+
+		&:hover,
+		&:active {
+			color: v.$hover-active-icon-button-gray;
+			font-size: 24px;
+		}
+	}
+
 	// Used so that the padding does not affect the size of the sidebar-container
 	.padded-container {
-		padding: 22px 18px 0px;
+		padding: v.$account-sidebar-padding-top
+			v.$account-sidebar-padding-left-right 0px;
 	}
 
 	.account-info {
 		display: block;
-		margin-bottom: v.$account-sidebar-contents-margin-top-bottom;;
+		margin-bottom: 5px;
 		font-size: v.$account-sidebar-account-info-font-size;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		text-align: center;
 	}
 
 	.account-info--name {
@@ -44,20 +64,12 @@
 		font-weight: bold;
 	}
 
-	.dividing-line {
-		margin: 27px 0px;
-		border: solid silver 1px;
+	.link-container {
+		padding-top: 5px;
+		text-align: center;
 	}
 
-	.account-link-container {
-		margin-top: v.$account-sidebar-contents-margin-top-bottom;
-		// Needed so resize will keep space between container and the bottom
-		padding-bottom: 12px;
-	}
-
-	.account-link {
-		display: block;
-		margin-bottom: v.$account-sidebar-contents-margin-top-bottom;;
+	.link-container__text {
 		font-size: v.$account-sidebar-link-font-size;
 		font-style: bold;
 		text-decoration: none;
@@ -67,5 +79,33 @@
 		&:active {
 			text-decoration: underline;
 		}
+	}
+
+	.horizontal-dividing-line {
+		margin: v.$account-sidebar-dividing-line-margin-top-bottom 0px;
+		border-top: solid silver 2px;
+	}
+
+	.button-container {
+		position: relative;
+		// Needed so resize will keep space between container and the bottom
+		padding-bottom: v.$account-sidebar-dividing-line-margin-top-bottom;
+		height: v.$account-sidebar-logout-button-height;
+	}
+
+	.button-container__logout-button {
+		@include m.horizontal-center();
+
+		border: solid silver 1px;
+		border-radius: 5px;
+		height: v.$account-sidebar-logout-button-height;
+		width: 80px;
+		cursor: pointer;
+	}
+
+	.button-container__logout-button__text {
+		@include m.dead-center();
+
+		font-size: v.$base-font-size;
 	}
 }
