Slight redesign to account modal and refactored blurred backgrounds

--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -9,22 +9,15 @@
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		border: v.$account-modal-border-width solid black;
-		border-radius: v.$account-modal-border-radius;
+		//border: v.$account-modal-border-width solid black;
+		//border-radius: v.$account-modal-border-radius;
 		background-color: white;
-		padding: 4px;
-		
-		//text-align: center;
-		font-family: Arial, Helvetica, sans-serif;
-	}
-
-	.inner-border-padding-container {
-		position: relative;
-		border: v.$account-modal-border-width solid black;
-		border-radius: v.$account-modal-border-radius;
 		padding: 30px;
 		height: v.$edit-account-modal-height;
 		width: v.$edit-account-modal-width;
+		
+		//text-align: center;
+		font-family: Arial, Helvetica, sans-serif;
 	}
 
 	.back-button {
