--- a/client/src/CSS/scss_partials/home/account/_accountBlurredBackground.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountBlurredBackground.scss
@@ -7,7 +7,7 @@
 	position: fixed;
 	left: 0;
 	top: 0;
-	background-color: black;
+	background-color: v.$blurred-background-color;
 	opacity: v.$blurred-background-opacity;
 	height: 100vh;
 	width: 100vw;
