--- a/client/src/CSS/scss_partials/home/menu/_hamburger.scss
+++ b/client/src/CSS/scss_partials/home/menu/_hamburger.scss
@@ -10,7 +10,7 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		background-color: black;
+		background-color: v.$blurred-background-color;
 		opacity: v.$blurred-background-opacity;
 		height: 100vh;
 		width: 100vw;
