--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/_deleteModal.scss
@@ -9,7 +9,7 @@
 		position: fixed;
 		top: v.$navbar-height;
 		left: 0px;
-		background-color: black;
+		background-color: v.$blurred-background-color;
 		opacity: v.$blurred-background-opacity;
 		height: 100vh;
 		width: 100vw;
