--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewCreateItemSidebar.scss
@@ -7,7 +7,7 @@
 		z-index: 1;
 		position: absolute;
 		top: v.$navbar-height;
-		background-color: black;
+		background-color: v.$blurred-background-color;
 		opacity: v.$blurred-background-opacity;
 		height: 100vh;
 		width: 100vw;
