--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -70,9 +70,11 @@ $status-purple: #9680ce;
 $status-orange: #ff9900;
 $status-green: #007e00;
 $status-red: #d14242;
+// Blurred background color
+$blurred-background-color: black;
 // Focus colors
 $focus-blue: #0059ff;
-// Icon Button Colors
+// Icon button colors
 $normal-icon-button-gray: $gray-level-5;
 $darker-icon-button-gray: $dark-gray-level-2;
 $hover-active-icon-button-gray: $dark-gray-level-4;
@@ -236,7 +238,7 @@ $common-line-height: 20px;
 //=========
 // Opacity
 //=========
-$blurred-background-opacity: 0.8;
+$blurred-background-opacity: 0.7;
 $click-to-close-blurred-background-opacity: 0.5;
 
 //===============================
