--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewSidebarTableAndRows.scss
@@ -67,7 +67,7 @@
 	}
 
 	.list-sidebar__table__row {
-		@include m.border-line();
+		border-bottom: v.$list-table-border-width solid v.$list-tale-border-color;
 		background-color: v.$list-table-background-color;
 		padding: 5px;
 		height: v.$list-item-table-row-height;
